--- a/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetHoaDonByMa.cshtml
+++ b/HN120_ShopQuanAo.View/Areas/Admin/Views/HoaDon/GetHoaDonByMa.cshtml
@@ -457,8 +457,9 @@
                 <input type="hidden" id="stt_hoadon" value="@Model.TrangThai" />
             </tr>
         </tbody>
-
+        
     </table>
+    <p>Ghi chú: @Model.Ghichu</p>
     <hr />
 </div>
 <div>
